# CDC

./: .dockerignore  .gitignore  Build-DataCrusher.ps1  CDC.slnx  LICENSE  README.md
.github/: copilot-instructions.md
DataCrusher/: .gitignore  Build-DataCrusher.ps1  CMakeLists.txt  CMakePresets.json  DataCrusher.vcxproj  README.md
DataCrusher/src/: Constants.h  CopyWriter.cpp  CopyWriter.h  DataCrusherEngine.cpp  DataCrusherEngine.h  LatencyMonitor.cpp  LatencyMonitor.h  Logger.cpp  Logger.h  Main.cpp  Platform.h  ReconnectionManager.cpp  ReconnectionManager.h  ReplicationStream.cpp  ReplicationStream.h  SignalTable.cpp  SignalTable.h  TenantWorker.cpp  TenantWorker.h  TenantWorkerConfig.h  TransactionManager.cpp  TransactionManager.h  TypeHandlers.cpp  TypeHandlers.h  WalMessageParser.cpp  WalMessageParser.h  WorkerManager.cpp  WorkerManager.h
